--- a/argocd/apps/prod-argo/apps/0-base/mongodb.config.json
+++ b/argocd/apps/prod-argo/apps/0-base/mongodb.config.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "project_name" : "mongodb",
-        "project_branch": "HEAD",
+        "project_branch": "main",
         "namespace" : "default",
         "manifest_type": "helm-oci",
         "helm_chart" : "oci://registry-1.docker.io/bitnamicharts/mongodb",
