--- a/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
+++ b/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
@@ -16,7 +16,7 @@ global:
   imagePullSecrets: []
   ## @param global.storageClass Global StorageClass for Persistent Volume(s)
   ##
-  storageClass: longhorn
+  storageClass: nfs
   postgresql:
     ## @param global.postgresql.auth.postgresPassword Password for the "postgres" admin user (overrides `auth.postgresPassword`)
     ## @param global.postgresql.auth.username Name for a custom user to create (overrides `auth.username`)
