--- a/argocd/apps/prod-argo/apps/1-applications/player-connect.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/player-connect.config.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "project_name" : "player-connect",
-        "project_branch" : "main",
+        "project_branch" : "HEAD",
 	"namespace" : "default",
 	"manifest_type": "yaml",
         "helm_chart" : "",
