modify generator with correct names

--- a/argocd/apps/prod-argo/apps/1-applications.yaml
+++ b/argocd/apps/prod-argo/apps/1-applications.yaml
@@ -34,11 +34,9 @@ spec:
             - name: HELM_REPO
               value: '{{app.helm_repo}}'
             - name: HELM_CHART
-              value: '{{app.helm_chart_name}}'
+              value: '{{app.helm_chart}}'
             - name: HELM_RELEASE_NAME
               value: '{{app.project_name}}'
-            - name: HTTP_PROXY
-              value: ''
             - name: NAMESPACE
               value: '{{app.namespace}}'
             - name: VALUES_FILE
