update nfs pv for player topomojo

--- a/argocd/apps/prod-k8s/1-applications/player.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/player.values.yaml
@@ -62,7 +62,7 @@ player-api:
   storage:
     existing: ""
     size: "5G"
-    mode: "ReadWriteMany"
+    mode: "ReadWriteOnce"
     class: "nfs"
 
   # Config app settings with environment vars.
