--- a/argocd/install/nfs-server/kustomize/base/kustomization.yaml
+++ b/argocd/install/nfs-server/kustomize/base/kustomization.yaml
@@ -8,6 +8,7 @@ helmCharts:
   repo: https://kvaps.github.io/charts
   releaseName: appliance
   valuesFile: files/nfs-server.values.yaml
+  namespace: nfs-server
 resources: 
 - namespace.yaml
 
