fix install of uuid-ossp extension

--- a/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
+++ b/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
@@ -61,7 +61,7 @@ primary:
   initdb:
     scripts:
       init.sql: |
-        CREATE EXTENSION uuid-ossp;
+        CREATE EXTENSION "uuid-ossp";
       # my_init_script.sh: |
   
     
