--- a/argocd/apps/keycloak/kustomize/base/files/keycloak.values.yaml
+++ b/argocd/apps/keycloak/kustomize/base/files/keycloak.values.yaml
@@ -122,7 +122,7 @@ ingress:
 postgresql:
   enabled: false
 externalDatabase:
-  host: "appliance-postgresql.postgres.svc.cluster.local"
+  host: "postgresql.default.svc.cluster.local"
   port: 5432
   user: "postgres"
   database: keycloak
