add keycloak database creation to postgres values

--- a/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
+++ b/argocd/apps/prod-k8s/0-base/postgresql.values.yaml
@@ -52,6 +52,8 @@ primary:
     scripts:
       init.sql: |
         CREATE EXTENSION "uuid-ossp";
+        CREATE DATABASE keycloak;
+        GRANT ALL PRIVILEGES ON DATABASE keycloak TO postgres;
       # my_init_script.sh: |
   
     
