--- a/argocd/patches/player/player-pv.yaml
+++ b/argocd/patches/player/player-pv.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: player-pv
+  namepsace: default
 spec:
   capacity:
     storage: 10Gi
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: player-api
+  namespace: default
 spec:
   resources:
     requests:
