--- a/argocd/apps/prod-argo/apps/2-monitoring.yaml
+++ b/argocd/apps/prod-argo/apps/2-monitoring.yaml
@@ -9,19 +9,19 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-argo.git
-      revision: HEAD
+      repoURL: https://github.com/sei-noconnor/crucible-appliance.git
+      revision: offline-reorg
       files:
-      - path: "apps/2-monitoring/*.json"
+      - path: "argocd/apps/prod-argo/2-monitoring/*.json"
   template:
     metadata:
       name: '{{app.project_name}}'
     spec:
       project: default
       source:
-        repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-k8s.git
+        repoURL: https://github.com/sei-noconnor/crucible-appliance.git
         targetRevision: '{{app.project_branch}}'
-        path: "monitoring"
+        path: "argocd/apps/prod-k8s/2-monitoring"
         plugin:
           name: argocd-vault-plugin
           env:
