--- a/argocd/install/argocd/Application.yaml
+++ b/argocd/install/argocd/Application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: fortress-prod-app
+  name: prod-argo
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,9 +11,9 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: apps
-    repoURL: https://crucible.local/gitea/fortress-manifests/fortress-prod-argo.git
-    targetRevision: HEAD
+    path: argocd/apps/prod-argo
+    repoURL: https://github.com/sei-noconnor/crucible-appliance.git
+    targetRevision: offline-reorg
     directory:
       recurse: false
   sources: []
