--- a/argocd/apps/prod-argo/root-app.yaml
+++ b/argocd/apps/prod-argo/root-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prod-app
+  name: prod-argo
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,7 +11,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: argocd/apps/prod-argo
+    path: argocd/apps/prod-argo/apps
     repoURL: https://github.com/sei-noconnor/crucible-appliance.git
     targetRevision: offline-reorg
     directory:
