Change alloy ImagePullPolicy: - when pull policy is set to always the k3s embedded registry is not used - update stackstorm values to use vault
Revert "disable stackstorm"

This reverts commit 082792500c5b570861353f5bdfaccb7add3629c0.

--- a/argocd/apps/prod-k8s/1-applications/alloy.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/alloy.values.yaml
@@ -1,8 +1,8 @@
 alloy-api:
   image:
     repository: cmusei/alloy-api
-    tag: '3.4.3'
-    pullPolicy: Always
+    tag: 3.4.3
+    pullPolicy: IfNotPresent
   command: ["bash", "-c", "update-ca-certificates && dotnet Alloy.Api.dll"]
 
   ingress:
