adds KUSTOMIZE_DIR environment variable to argocd generators

--- a/argocd/apps/prod-argo/apps/1-applications.yaml
+++ b/argocd/apps/prod-argo/apps/1-applications.yaml
@@ -41,6 +41,8 @@ spec:
               value: '{{app.namespace}}'
             - name: VALUES_FILE
               value: '{{app.values_file}}'
+            - name: KUSTOMIZE_DIR
+              value: '{{app.kustomize_dir}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: default
