--- a/argocd/apps/prod-argo/apps/1-applications/caster.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/caster.config.json
@@ -8,6 +8,7 @@
         "helm_chart" : "caster",
         "helm_chart_version" : "1.4.3",
         "values_file" : "caster.values.yaml",
-        "helm_args" : ""
+        "helm_args" : "",
+        "kustomize_dir" : ""
     }
 }
