--- a/argocd/apps/prod-argo/apps/1-applications/cite.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/cite.config.json
@@ -8,6 +8,7 @@
         "helm_chart" : "cite",
         "helm_chart_version" : "1.4.1",
         "values_file" : "cite.values.yaml",
-        "helm_args" : ""
+        "helm_args" : "",
+        "kustomize_dir" : ""
     }
 }
