--- a/argocd/apps/prod-argo/apps/1-applications/osticket.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/osticket.config.json
@@ -8,6 +8,7 @@
         "helm_chart" : "osticket",
         "helm_chart_version" : "1.17.5",
         "values_file" : "osticket.values.yaml",
-        "helm_args" : ""
+        "helm_args" : "",
+        "kustomize_dir" : ""
     }
 }
