--- a/argocd/apps/prod-argo/apps/1-applications/player.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/player.config.json
@@ -8,6 +8,7 @@
         "helm_chart" : "player",
         "helm_chart_version" : "1.4.4",
         "values_file" : "player.values.yaml",
-        "helm_args" : ""
+        "helm_args" : "",
+        "kustomize_dir" : ""
     }
 }
