--- a/argocd/apps/prod-k8s/1-applications/caster.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/caster.values.yaml
@@ -169,7 +169,7 @@ caster-ui:
       "ApiUrl": "https://<path:fortress-prod/data/shared#domain>/caster",
       "OIDCSettings": {
         "authority": "https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authority-url>",
-        "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_caster-ui",
+        "client_id": "caster-ui",
         "redirect_uri": "https://<path:fortress-prod/data/shared#domain>/caster/auth-callback",
         "post_logout_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/caster",
         "response_type": "code",
