--- a/argocd/apps/prod-k8s/1-applications/cite.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/cite.values.yaml
@@ -37,7 +37,7 @@ cite-ui:
     "GalleryApiUrl": "https://<path:fortress-prod/data/shared#domain>/gallery",
      "OIDCSettings": {
         "authority": "https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible",
-        "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_cite-ui",
+        "client_id": "cite-ui",
         "redirect_uri": "https://<path:fortress-prod/data/shared#domain>/cite/auth-callback",
         "post_logout_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/cite",
         "response_type": "code",
