--- a/argocd/apps/prod-k8s/1-applications/stackstorm-min.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/stackstorm-min.values.yaml
@@ -70,7 +70,7 @@ st2:
         pullPolicy: IfNotPresent
 
 ingress:
-  enabled: false
+  enabled: true
   annotations:
     kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
     nginx.ingress.kubernetes.io/rewrite-target: /$1
