--- a/argocd/install/nginx/kustomize/base/kustomization.yaml
+++ b/argocd/install/nginx/kustomize/base/kustomization.yaml
@@ -4,10 +4,11 @@ namespace: ingress-nginx
 helmCharts:
 - name: ingress-nginx
   includeCRDs: true
-  version: v4.11.1
+  version: v4.11.3
   repo: https://kubernetes.github.io/ingress-nginx
   releaseName: appliance
-  valuesFile: files/nginx.values.yaml
+  valuesFile: files/ingress-nginx-4-11-3.values.yaml
+  namespace: ingress-nginx
 resources: 
 - namespace.yaml
 
