--- a/argocd/install/nginx/kustomize/base/files/ingress-nginx-4-11-3.values.yaml
+++ b/argocd/install/nginx/kustomize/base/files/ingress-nginx-4-11-3.values.yaml
@@ -27,6 +27,11 @@ controller:
     ## use *either* current default registry/image or repository format or installing chart by providing the values.yaml will fail
     ## repository:
     tag: "v1.11.3"
+    ## for backwards compatibility consider setting the full image url via the repository value below
+    ## use *either* current default registry/image or repository format or installing chart by providing the values.yaml will fail
+    ## repository:
+    digest: 
+    digestChroot: 
     pullPolicy: IfNotPresent
     runAsNonRoot: true
     # www-data -> uid 101
