updates to shrink to remove dist directories - adds packages - checks if packages exist - exports containers

--- a/argocd/install/gitea/kustomize/base/files/packages.yaml
+++ b/argocd/install/gitea/kustomize/base/files/packages.yaml
@@ -8,36 +8,78 @@ helm:
   items:
   - topomojo:0.3.8
   - player:1.4.5
+  - player1.4.4
   - alloy:1.4.1
   - steamfitter:1.4.2
-  - caster:1.4.3 
+  - steamfitter:1.4.1
+  - caster:1.4.3
   - blueprint:1.4.1
-- name: bitnami
+  - cite:1.4.1
+  - gallery:1.4.1
+  - mkdocs:0.2.2
+  - osticket:1.17.5
+  - topomojo:0.3.8
+
+- name: gitea
   repoUrl: https://dl.gitea.io/charts/
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - gitea:1.4.0
+  - gitea:10.6.0
+- name: bitnami
+  repoUrl: https://charts.bitnami.com/bitnami
   giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
   items:
   - keycloak:15.1.8
   - postgresql:12.8.0
-- name: gitea
-  repoUrl: https://charts.bitnami.com/bitnami
-  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
-  items:
-  - gitea:1.4.0
 - name: ingress-nginx
   repoUrl: https://kubernetes.github.io/ingress-nginx
   giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
   items:
   - ingress-nginx:4.11.3
-- name: argo-cd
+  - ingress-nginx:4.11.1
+- name: argocd
   repoUrl: https://argoproj.github.io/argo-helm
   giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
   items:
-  - argocd:7.4.2
-
+  - argocd:7.6.2
+- name: stackstorm
+  repoUrl: https://helm.stackstorm.com
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - stackstorm-ha:0.110.0
+- name: jetstack
+  repoUrl: https://charts.jetstack.io
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - cert-manager:1.16.1
+- name: longhorn
+  repoUrl: https://charts.longhorn.io
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - longhorn:1.6.0
+  - longhorn:1.5.4
+  - longhorn:1.5.5
+- name: kvaps
+  repoUrl: https://kvaps.github.io/charts
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - nfs-server-provisioner:1.8.0
+- name: hashicorp
+  repoUrl: https://helm.releases.hashicorp.com
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - vault:0.27.0
+  
+helm-oci:
+  giteaUrl: https://${DOMAIN}/api/packages/${OWNER}/helm/api/charts
+  items:
+  - oci://registry-1.docker.io/bitnamicharts/postgresql:12.12.10
+  - oci://registry-1.docker.io/bitnamicharts/mongodb:14.8.0
 containers:
   giteaUrl: http://${DOMAIN}/api/v1/packages/${OWNER}/container/${ITEM}/${VERSION}
   items:
-  
+  - oci://registry-1.docker.io/bitnamicharts/mongodb:14.8.0
 debian:
 - distro: jammy
   os: ubuntu
